--- a/PesterChum/auth.ui
+++ b/PesterChum/auth.ui
@@ -19,6 +19,13 @@
   <property name="windowTitle">
    <string/>
   </property>
+  <property name="styleSheet">
+   <string notr="true">    background-color: #f39c12;
+    color: #ffffff;
+    border: 1px solid #d35400;
+    padding: 5px 10px;
+    border-radius: 3px;</string>
+  </property>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
@@ -28,10 +35,19 @@
      <height>231</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">QGroupBox, QLineEdit, QLabel, QPushButton {
+border: 1px solid #d35400;
+}
+
+QGroupBox {
+color: #8B4513
+}</string>
+   </property>
    <property name="title">
     <string>Authorization</string>
    </property>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>50</x>
@@ -54,6 +70,11 @@
              <bold>false</bold>
             </font>
            </property>
+           <property name="styleSheet">
+            <string notr="true">background-color: #f1c40f;
+color : #8B4513
+</string>
+           </property>
            <property name="text">
             <string>username</string>
            </property>
@@ -67,6 +88,11 @@
              <pointsize>10</pointsize>
             </font>
            </property>
+           <property name="styleSheet">
+            <string notr="true">background-color: #f1c40f;
+color: #8B4513
+</string>
+           </property>
            <property name="text">
             <string>password</string>
            </property>
@@ -77,10 +103,22 @@
        <item>
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
-          <widget class="QLineEdit" name="userLine"/>
+          <widget class="QLineEdit" name="userLine">
+           <property name="styleSheet">
+            <string notr="true">background-color: #ffffff;
+color: #000000
+
+</string>
+           </property>
+          </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="passwordLine"/>
+          <widget class="QLineEdit" name="passwordLine">
+           <property name="styleSheet">
+            <string notr="true">background-color: #ffffff;
+color: #000000</string>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
@@ -109,6 +147,18 @@
            <pointsize>10</pointsize>
           </font>
          </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton {
+background-color: #f1c40f;
+color: #8B4513;
+}
+
+QPushButton:hover {
+background-color: #FFFF00;
+color: #8B4513;
+}
+</string>
+         </property>
          <property name="text">
           <string>Sign-In</string>
          </property>
@@ -121,6 +171,18 @@
            <family>Bahnschrift</family>
            <pointsize>10</pointsize>
           </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton {
+background-color: #f1c40f;
+color: #8B4513;
+}
+
+QPushButton:hover {
+background-color: #FFFF00;
+color: #8B4513;
+}
+</string>
          </property>
          <property name="text">
           <string>Sign-Up</string>
