--- a/PesterChum/mainwindow.ui
+++ b/PesterChum/mainwindow.ui
@@ -40,7 +40,7 @@
     <property name="font">
      <font>
       <family>Bahnschrift</family>
-      <pointsize>12</pointsize>
+      <pointsize>15</pointsize>
      </font>
     </property>
     <property name="styleSheet">
@@ -48,6 +48,21 @@
 	background-color: #ffffff;
 	color: #000000
 }</string>
+    </property>
+    <property name="resizeMode">
+     <enum>QListView::Fixed</enum>
+    </property>
+    <property name="layoutMode">
+     <enum>QListView::SinglePass</enum>
+    </property>
+    <property name="spacing">
+     <number>0</number>
+    </property>
+    <property name="viewMode">
+     <enum>QListView::ListMode</enum>
+    </property>
+    <property name="wordWrap">
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label">
