--- a/PesterChum/auth.ui
+++ b/PesterChum/auth.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>530</width>
-    <height>343</height>
+    <width>680</width>
+    <height>326</height>
    </rect>
   </property>
   <property name="font">
@@ -17,195 +17,212 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string/>
+   <string>Присоединяйтесь, чтобы стать мастерами чаек и пирожков!</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">    background-color: #f39c12;
+   <string notr="true">    background-color: rgba(255, 181, 0, 1);
     color: #ffffff;
-    border: 1px solid #d35400;
     padding: 5px 10px;
-    border-radius: 3px;</string>
+    border-radius: 3px;
+    border-radius: 0;</string>
   </property>
-  <widget class="QGroupBox" name="groupBox">
+  <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>30</y>
-     <width>371</width>
-     <height>231</height>
+     <x>0</x>
+     <y>0</y>
+     <width>671</width>
+     <height>71</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>MS Serif</family>
+     <pointsize>32</pointsize>
+    </font>
+   </property>
    <property name="styleSheet">
-    <string notr="true">QGroupBox, QLineEdit, QLabel, QPushButton {
-border: 1px solid #d35400;
+    <string notr="true"/>
+   </property>
+   <property name="text">
+    <string>АУТЕНТИФИКАЦИЯ)</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>100</y>
+     <width>661</width>
+     <height>120</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="font">
+         <font>
+          <family>MS Serif</family>
+          <pointsize>17</pointsize>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">color: rgb(0, 0, 0);
+</string>
+        </property>
+        <property name="text">
+         <string>КОРЕШНИК:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_2">
+        <property name="font">
+         <font>
+          <family>MS Serif</family>
+          <pointsize>17</pointsize>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">color: rgb(0, 0, 0);</string>
+        </property>
+        <property name="text">
+         <string>ПАРОЛЬ:</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
+       <widget class="QLineEdit" name="userLine">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="font">
+         <font>
+          <family>MS Serif</family>
+          <pointsize>22</pointsize>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: #ffffff;
+color: #000000;
+border: 5px solid rgba(197, 139, 3, 1);</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="passwordLine">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="font">
+         <font>
+          <family>MS Serif</family>
+          <pointsize>22</pointsize>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: #ffffff;
+color: #000000;
+border: 5px solid rgba(197, 139, 3, 1);</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>240</y>
+     <width>601</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <item>
+     <widget class="QPushButton" name="SignInButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Serif</family>
+        <pointsize>26</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton {
+background-color: #fff700;
+color: rgb(0, 0, 0);
+border: 5px solid rgba(197, 139, 3, 1);
 }
 
-QGroupBox {
-color: #8B4513
+QPushButton:hover {
+background-color: rgb(244, 255, 39);
+color: rgb(0, 0, 0);
+border: 5px solid rgba(197, 139, 3, 1);
 }</string>
-   </property>
-   <property name="title">
-    <string>Authorization</string>
-   </property>
-   <widget class="QWidget" name="layoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>50</x>
-      <y>50</y>
-      <width>271</width>
-      <height>121</height>
-     </rect>
-    </property>
-    <layout class="QVBoxLayout" name="verticalLayout_3">
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
-        <layout class="QVBoxLayout" name="verticalLayout_2">
-         <item>
-          <widget class="QLabel" name="label">
-           <property name="font">
-            <font>
-             <family>Bahnschrift</family>
-             <pointsize>10</pointsize>
-             <bold>false</bold>
-            </font>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">background-color: #f1c40f;
-color : #8B4513
-</string>
-           </property>
-           <property name="text">
-            <string>username</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="label_2">
-           <property name="font">
-            <font>
-             <family>Bahnschrift</family>
-             <pointsize>10</pointsize>
-            </font>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">background-color: #f1c40f;
-color: #8B4513
-</string>
-           </property>
-           <property name="text">
-            <string>password</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <layout class="QVBoxLayout" name="verticalLayout">
-         <item>
-          <widget class="QLineEdit" name="userLine">
-           <property name="styleSheet">
-            <string notr="true">background-color: #ffffff;
-color: #000000
-
-</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="passwordLine">
-           <property name="styleSheet">
-            <string notr="true">background-color: #ffffff;
-color: #000000</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <item>
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <widget class="QPushButton" name="SignInButton">
-         <property name="font">
-          <font>
-           <family>Bahnschrift</family>
-           <pointsize>10</pointsize>
-          </font>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">QPushButton {
-background-color: #f1c40f;
-color: #8B4513;
+      </property>
+      <property name="text">
+       <string>ВОЙТИ</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="SignUpButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Serif</family>
+        <pointsize>26</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton {
+background-color: #fff700;
+color: rgb(0, 0, 0);
+border: 5px solid rgba(197, 139, 3, 1);
 }
 
 QPushButton:hover {
-background-color: #FFFF00;
-color: #8B4513;
+background-color: rgb(244, 255, 39);
+color: rgb(0, 0, 0);
+border: 5px solid rgba(197, 139, 3, 1);
 }
 </string>
-         </property>
-         <property name="text">
-          <string>Sign-In</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="SignUpButton">
-         <property name="font">
-          <font>
-           <family>Bahnschrift</family>
-           <pointsize>10</pointsize>
-          </font>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">QPushButton {
-background-color: #f1c40f;
-color: #8B4513;
-}
-
-QPushButton:hover {
-background-color: #FFFF00;
-color: #8B4513;
-}
-</string>
-         </property>
-         <property name="text">
-          <string>Sign-Up</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer_2">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
-     </item>
-    </layout>
-   </widget>
+      </property>
+      <property name="text">
+       <string>ЗАРЕГИТЬСЯ</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
